# cacao-engine

./: Cargo.toml
src/: errors.rs  lib.rs  main.rs
src/assets/: mod.rs
src/audio/: mod.rs
src/crypto/: mod.rs
src/engine/: mod.rs
src/examples/: mod.rs
src/game/: info.rs  loader.rs  mod.rs  runtime.rs
src/input/: mod.rs
src/renderer/: camera.rs  mod.rs  primitive.rs  shader.rs  sprite.rs  text.rs  texture.rs
src/saves/: mod.rs
src/shaders/: primitive.wgsl  sprite.wgsl  text.wgsl
test/simpleplatformer/: main.lua
