[package]
name = "cacao"
version = "0.1.0"
edition = "2021"
description = "Cacao is an offline game engine that lets you download and play games! And it also comes with an visual editor, wow!"
authors = ["Adam Hawree adam453345@gmail.com"]

[[bin]]
name = "cacao"  # Instead of "cacao-engine"
path = "src/main.rs"

[dependencies]
# Core dependencies
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
env_logger = "0.10"
log = "0.4"

# Game logic
mlua = { version = "0.9", default-features = false, features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Audio
rodio = "0.17"
symphonia = "0.5"

# Math and utilities
glam = "0.24"
image = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Crypto for save files
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# File handling
zip = { version = "0.6", features = ["deflate"] }
walkdir = "2.3"

# Async/concurrency
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Missing bytemuck dependency
bytemuck = { version = "1.23.2", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"